# multimodal-biometric-mlops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  experiment_runs.db  pyproject.toml  training_config.json
.github/workflows/: ci.yml
benchmarks/: benchmark_dataloader.py
benchmarks/results/: benchmark_results.json
configs/: config.yaml
configs/data/: default.yaml  performance.yaml
configs/model/: fusion_net.yaml  simple_cnn.yaml
configs/storage/: azure.yaml  local.yaml
configs/training/: default.yaml  quick.yaml
docs/: architecture.md  decisions.md  deployment.md  eda.ipynb  generate_training_curves.py  scalability-analysis.md  scalability_analysis.md
docs/adr/: 001-hydra-config.md  002-pyarrow-caching.md  003-ray-preprocessing.md  004-fusion-strategy.md
scripts/: download_data.py  preprocess.py  train.py
src/biometric/: __init__.py  cli.py
src/biometric/data/: __init__.py  arrow_cache.py  dataloader.py  dataset.py  registry.py  transforms.py  validation.py
src/biometric/inference/: __init__.py  predictor.py
src/biometric/models/: __init__.py  base.py  export.py  fingerprint_encoder.py  fusion.py  iris_encoder.py
src/biometric/preprocessing/: __init__.py  parallel_processor.py
src/biometric/storage/: __init__.py  azure.py  base.py  factory.py  local.py
src/biometric/training/: __init__.py  callbacks.py  experiment.py  metrics.py  run_tracker.py  trainer.py
src/biometric/utils/: __init__.py  logging.py  profiling.py  reproducibility.py
tests/: conftest.py  test_arrow_cache.py  test_azure_storage.py  test_dataloader.py  test_dataset.py  test_experiment.py  test_export.py  test_model.py  test_predictor.py  test_preprocessing.py  test_registry.py  test_run_tracker.py  test_storage.py  test_trainer.py  test_transforms.py  test_utils.py  test_validation.py
tests/integration/: __init__.py  test_e2e_pipeline.py
