[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-biometric-mlops"
version = "0.1.0"
description = "Scalable multimodal biometric recognition system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Anand Kummari"},
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pyarrow>=14.0.0",
    "ray>=2.9.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
azure = [
    "azure-storage-blob>=12.19.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
biometric-train = "biometric.cli:train"
biometric-infer = "biometric.cli:infer"
biometric-preprocess = "biometric.cli:preprocess"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "D100",   # missing module docstring
    "D104",   # missing public package docstring
    "D105",   # missing docstring in magic method
    "D107",   # missing docstring in __init__
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "ANN401", # disallow typing.Any
    "SIM115", # use context handler for opening files
    "UP038",  # use X | Y in isinstance
    "TCH",    # type-checking block imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D102",   # test methods don't need docstrings
    "D103",   # test functions don't need docstrings
    "ANN",    # test code doesn't need full type annotations
    "S101",   # assert is expected in tests
]
"scripts/**/*.py" = [
    "D103",   # script helper functions
]
"benchmarks/**/*.py" = [
    "D103",   # benchmark helper functions
    "ANN",    # benchmark code doesn't need full annotations
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
plugins = []

[[tool.mypy.overrides]]
module = [
    "ray.*",
    "hydra",
    "hydra.*",
    "omegaconf",
    "omegaconf.*",
    "torchvision.*",
    "pyarrow.*",
    "azure.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
